# ruskit_examples

./: Cargo.toml  LICENSE  README  README.md
http_api/: .dockerignore  .env.local  .env.prod  Cargo.toml
http_api/src/: main.rs  openapi.rs
http_api/src/controllers/: todos.rs
http_api/src/routes/: mod.rs  todos.rs
http_api/src/todos/: mod.rs
http_api/src/todos/controllers/: mod.rs  todos.rs
http_api/src/todos/routes/: basic.rs  mod.rs
http_api/src/todos/viewmodels/: mod.rs  todos.rs
rabbitmq_consumer/: .env.local  .env.prod  Cargo.toml  Makefile  README.md
rabbitmq_consumer/.dockerfiles/: Dockerfile.rabbitmq  docker-compose.yml
rabbitmq_consumer/src/: main.rs
rabbitmq_consumer/src/handlers/: mod.rs  simple_handler.rs
rabbitmq_consumer/src/viewmodel/: mod.rs  simple_msg.rs
sql_migration/: .env.local  Cargo.toml
sql_migration/sql/: table_up.sql
sql_migration/src/: main.rs
