[package]
name = "rabbitmq-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
configs = { workspace = true }
configs-builder = { workspace = true }
logging = { workspace = true  }
traces = { workspace = true  }
amqp = { workspace = true  }
health-readiness = { workspace = true  }

tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.37" }
opentelemetry = { version = "0.19.0" }
async-trait = { version = "0.1.63" }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = { version = "1.0.89" }
