[package]
name = "sql_migration"
version = "0.1.0"
edition = "2021"

[dependencies]
env = { git = "ssh://git@github.com/ralvescosta/ruskit.git", rev = "v1.7.0" }
logging = { git = "ssh://git@github.com/ralvescosta/ruskit.git", rev = "v1.7.0" }
sql-pool = { git = "ssh://git@github.com/ralvescosta/ruskit.git", rev = "v1.7.0", features = ["sqlite"] }
migrator = { git = "ssh://git@github.com/ralvescosta/ruskit.git", rev = "v1.7.0", features = ["sqlite"] }

tracing = { version = "0.1.37" }
tokio = { version = "1.23.0", features = ["default", "rt-multi-thread", "macros"] }